# XOEngineCore

./: CMakeLists.txt  XO.cpp  XO.h  baseevaluator.h  branch.h  core.cpp  core.h  depth_manager.h  direction.cpp  direction.h  directioniterator.h  engineinfo.h  evaluationmanager.h  field.cpp  field.h  fielditerator.cpp  fielditerator.h  fieldmetrics.cpp  fieldmetrics.h  gameobserver.cpp  gameobserver.h  gamestate.cpp  gamestate.h  icoreimpl.cpp  icoreimpl.h  main.cpp  movegenerator.h  movelist.h  oldthreatcache.cpp  oldthreatcache.h  piece.cpp  piece.h  piecemask.cpp  piecemask.h  pieceset.cpp  pieceset.h  piecesetcache.cpp  piecesetcache.h  point.h  position_data.h  (+24 more)
Include/: builtintypes.h  fieldmetrics.h  icore.h  math.h  move.h  offset_1d.h  piece.h  point.h  staroffset.h  types.h
Observer/: CMakeLists.txt  oldthreatcache.h  pieceset.h  positioncache.h  positionhash.h  sortedthreatset.h  squareinfluence.cpp  squareinfluence.h  squareobserver.cpp  squareobserver.h  squarescore.cpp  squarescore.h  squaretracker.h  tacticalcache.cpp  tacticalcache.h  tacticset.h  threat.h  threatcache.cpp  threatcache.h
Observer/Threat/: CMakeLists.txt  oldthreatcache.h  pieceset.h  threat.cpp  threat.h  threatcache.cpp  threatcache.h
